Bug 161970 - Content control: bad widget position when combined with notes-in-margin for PDF export
Summary: Content control: bad widget position when combined with notes-in-margin for P...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.2.0 target:24.8.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-09 13:29 UTC by Miklos Vajna
Modified: 2024-07-11 16:07 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (16.04 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-07-09 13:29 UTC, Miklos Vajna
Details
How it looks currently (8.66 KB, image/png)
2024-07-09 13:32 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-07-09 13:29:53 UTC
Created attachment 195184 [details]
Minimal reproducer

Steps to reproduce the problem:

1) Open the attached document

2) Export to PDF using File -> Export as -> Export as PDF

3) Make sure "Comments in margin" is enabled

4) Click the Export button

5) Check the result in a PDF reader

Expected result: "before sdt", "sixty (60)" and "after sdt" is in one layout line.

Actual result: "sixty (60)" is above "before sdt".
Comment 1 Miklos Vajna 2024-07-09 13:32:31 UTC
Created attachment 195185 [details]
How it looks currently
Comment 2 Commit Notification 2024-07-10 08:44:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/597806350152b746b192a66b4789ca7c8c5377a9

tdf#161970 sw content controls: fix PDF export for the ExportNotesInMargin case

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-07-11 16:07:15 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/6004c5e71c44ac76848ff9ff4c85a73f9e455190

tdf#161970 sw content controls: fix PDF export for the ExportNotesInMargin case

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.