tdf#161970 sw content controls: fix PDF export for the ExportNotesInMargin case

Have both a content control and a comment in a document, export to PDF
while "Comments in margin" is enabled, now the default text of the
content control has an incorrect position / size.

The transform for normal writer comment was added in commit
eb1c0480050a1328287c4a85468afbec50b0e29d (Resolves: fdo#36815 enable
printing WYSIWYG sidewindow comments, 2014-04-16), and e.g. the
hyperlink rectangles are transformed correctly, but the content control
PDF export code added in commit 82d90529dc2b3cb8359dec78852cbd910a66d275
(sw content controls, rich text: add initial PDF export, 2022-09-12)
missed this.

Fix the problem by extracting the actual transform to a new
SwEnhancedPDFExportHelper::MapSwRectToPDFRect() and then using it in
both SwEnhancedPDFExportHelper::SwRectToPDFRect() (e.g. hyperlinks) and
SwContentControlPortion::DescribePDFControl().

Note that the font size of the PDF widget also needs scaling down, also
fix here.

(cherry picked from commit 597806350152b746b192a66b4789ca7c8c5377a9)

Change-Id: I9cccbd569070336e1720ba2a82e91793083722f1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170342
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>